# nb_tanks

./: .gitignore  CMakeLists.txt  README.md
client/: assets.h  game_client.c  game_client.h  input.c  input.h  main.c  network.c  network.h  projectile.c  projectile.h  rendering.c  rendering.h  scenes.h  tank.c  tank.h
client/assets/atlases/: atlas.rtpa
client/scenes/: connection.c  connection_error.c  game.c  main_menu.c
common/: assertion.h  asset_manager.c  asset_manager.h  game_clock.h  game_loop.c  game_loop.h  game_object.h  game_object_manager.c  game_object_manager.h  htable.c  htable.h  input.h  list.c  list.h  logging.c  logging.h  memory_manager.c  memory_manager.h  nbnet.h  nbnet_impl.c  network.c  network.h  projectile.c  projectile.h  projectile_update.c  projectile_update.h  raylib.h  scene_manager.c  scene_manager.h  tank.c  tank.h  tank_control.c  tank_control.h  util.c  util.h
server/: client.c  client.h  game.c  game.h  game_server.c  game_server.h  input.c  input.h  main.c  network.c  network.h  projectile.c  projectile.h  tank.h
